--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -26,5 +26,6 @@ jobs:
 
       - name: Run Sanity Checks
         run: |
+          python -m unittest discover -s tests -p "test_*.py" -v
           python scripts/sanity_check.py
           python scripts/check_macro_calendar.py
